# at-peek

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_CLOUDFLARE.md  LICENSE-MIT  README.md  SUMMARY.md  check-labels.py  check-labels.sh  rustfmt.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/plans/: mvp-phase1.md
.specify/specs/: atproto-client.md  label-display-components.md  privacy-storage.md  web-ui-architecture.md
.specify/tasks/: m1-project-scaffold.md  m2-record-fetching.md  m3-web-ui-prototype.md  m4-logging-storage.md  m5-polish-dark-mode.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/templates/commands/: build-and-test.md  code-quality.md  query-labels-manual.md  release-build.md  setup-project.md
crates/at-peek-web/: Cargo.toml  Trunk.toml  index.html  wrangler.toml
crates/at-peek-web/src/: lib.rs  state.rs  utils.rs
crates/at-peek-web/src/components/: app.rs  auth_panel.rs  bulk_analysis.rs  empty_state.rs  header.rs  input_panel.rs  label_badge.rs  label_viewer.rs  mod.rs
crates/atproto_client/: Cargo.toml
crates/atproto_client/src/: auth.rs  error.rs  labeler.rs  lib.rs  posts.rs  resolver.rs  types.rs
specs/001-leptos-0.7-migration/: EXECUTION-REPORT.md  README.md  baseline.md  migration-summary.md  plan.md  spec.md
