# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "at-peek-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atproto_client = { path = "../atproto_client" }

leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
urlencoding = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
    "Location",
] }

console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

chrono = { workspace = true }

[lib]
crate-type = ["cdylib"]


