# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "atproto_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
log = { workspace = true }

# For WASM support
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Storage"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lib]
crate-type = ["cdylib", "rlib"]


